# raytrace

./: CMakeLists.txt
include/: camera.h  color.h  entity.h  light.h  light_model.h  material.h  math3d.h  pixbuf.h  ray.h  ray_hit.h  transform.h
lib/math/: transform.cpp
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/entity/: entity.cpp  plane.cpp  sphere.cpp
src/light_model/: lambert_model.cpp  light_model.cpp  light_model.h  phong_model.cpp
